output/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-helm-server-example
  labels:
    helm.sh/chart: helm-server-example-0.1.0
    app.kubernetes.io/name: helm-server-example
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: helm-server-example
    app.kubernetes.io/instance: release-name
